--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build:dll": "webpack --config ./build/webpack.dll.js",
     "build": "webpack --config build/webpack.prod.js",
     "publish": "npm run build && node scripts/publish.js",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "new:comp": "node scripts/new-comp.js"
   },
   "husky": {
@@ -37,6 +39,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "cheerio": "^1.0.0-rc.3",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^1.0.0",
@@ -54,6 +57,7 @@
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "lint-staged": "^10.0.8",
+    "markdown-it-container": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.14.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
@@ -64,6 +68,7 @@
     "shelljs": "^0.8.3",
     "style-loader": "^0.21.0",
     "svg-sprite-loader": "^4.2.5",
+    "transliteration": "^2.1.8",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.2.6",
