--- a/package.json
+++ b/package.json
@@ -1,96 +1,97 @@
 {
-  "name": "github-ui",
-  "version": "1.0.0",
-  "description": "一个仿造github ui 的 vue 组件库",
-  "main": "index.js",
-  "scripts": {
-    "precommit": "lint-staged",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --hot --inline --config build/webpack.dev.js --api_env botme",
-    "commit": "node scripts/git-commit.js",
-    "build:dll": "webpack --config ./build/webpack.dll.js",
-    "build": "webpack --config build/webpack.prod.js",
-    "publish": "npm run build && node scripts/publish.js",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
-    "new:comp": "node scripts/new-comp.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
+    "name": "github-ui",
+    "version": "1.0.0",
+    "description": "一个仿造github ui 的 vue 组件库",
+    "main": "index.js",
+    "scripts": {
+        "precommit": "lint-staged",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "webpack-dev-server --hot --inline --config build/webpack.dev.js --api_env botme",
+        "commit": "node scripts/git-commit.js",
+        "build:dll": "webpack --config ./build/webpack.dll.js",
+        "build": "webpack --config build/webpack.prod.js",
+        "build:icon": "webpack --config build/webpack.icon.js",
+        "publish": "npm run build && node scripts/publish.js",
+        "docs:dev": "vuepress dev docs",
+        "docs:build": "npm run build:icon && vuepress build docs",
+        "new:comp": "node scripts/new-comp.js"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/xiao-team/github-ui.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/xiao-team/github-ui/issues"
+    },
+    "homepage": "https://github.com/xiao-team/github-ui#readme",
+    "devDependencies": {
+        "add-asset-html-webpack-plugin": "^3.1.3",
+        "autoprefixer": "^9.1.0",
+        "babel-core": "^6.26.3",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^7.1.5",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "cheerio": "^1.0.0-rc.3",
+        "clean-webpack-plugin": "^0.1.19",
+        "copy-webpack-plugin": "^5.0.2",
+        "css-loader": "^1.0.0",
+        "eslint": "^6.8.0",
+        "eslint-plugin-vue": "^7.0.0-alpha.0",
+        "file-loader": "^1.1.11",
+        "friendly-errors-webpack-plugin": "^1.7.0",
+        "gh-pages": "^2.2.0",
+        "happypack": "^5.0.0",
+        "hard-source-webpack-plugin": "^0.13.1",
+        "html-webpack-plugin": "^3.2.0",
+        "husky": "^4.2.3",
+        "image-webpack-loader": "^4.3.1",
+        "inquirer": "^6.2.1",
+        "less": "^3.8.0",
+        "less-loader": "^4.1.0",
+        "lint-staged": "^10.0.8",
+        "markdown-it-container": "^2.0.0",
+        "mini-css-extract-plugin": "^0.4.1",
+        "optimize-css-assets-webpack-plugin": "^5.0.0",
+        "ora": "^4.0.4",
+        "postcss-loader": "^2.1.6",
+        "prettier": "^2.0.5",
+        "sass": "~1.24.1",
+        "sass-loader": "~7.3.1",
+        "shelljs": "^0.8.3",
+        "style-loader": "^0.21.0",
+        "svg-sprite-loader": "^4.2.5",
+        "transliteration": "^2.1.8",
+        "uglifyjs-webpack-plugin": "^1.2.7",
+        "url-loader": "^1.1.2",
+        "vue-loader": "^15.2.6",
+        "vue-template-compiler": "^2.5.17",
+        "webpack": "^4.16.3",
+        "webpack-bundle-analyzer": "^3.6.0",
+        "webpack-cli": "^3.1.0",
+        "webpack-dev-server": "^3.3.0",
+        "webpack-merge": "^4.1.4",
+        "workbox-webpack-plugin": "^4.3.1"
+    },
+    "lint-staged": {
+        "src/**/*.{js,json,vue}": [
+            "prettier --write",
+            "eslint --fix"
+        ]
+    },
+    "dependencies": {
+        "axios": "^0.19.2",
+        "es6-promise": "^4.2.5",
+        "vue": "^2.5.17",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     }
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xiao-team/github-ui.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/xiao-team/github-ui/issues"
-  },
-  "homepage": "https://github.com/xiao-team/github-ui#readme",
-  "devDependencies": {
-    "add-asset-html-webpack-plugin": "^3.1.3",
-    "autoprefixer": "^9.1.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "cheerio": "^1.0.0-rc.3",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^5.0.2",
-    "css-loader": "^1.0.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.0.0-alpha.0",
-    "file-loader": "^1.1.11",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "gh-pages": "^2.2.0",
-    "happypack": "^5.0.0",
-    "hard-source-webpack-plugin": "^0.13.1",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^4.2.3",
-    "image-webpack-loader": "^4.3.1",
-    "inquirer": "^6.2.1",
-    "less": "^3.8.0",
-    "less-loader": "^4.1.0",
-    "lint-staged": "^10.0.8",
-    "markdown-it-container": "^2.0.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.14.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "ora": "^4.0.4",
-    "postcss-loader": "^2.1.6",
-    "prettier": "^2.0.5",
-    "sass-loader": "^7.1.0",
-    "shelljs": "^0.8.3",
-    "style-loader": "^0.21.0",
-    "svg-sprite-loader": "^4.2.5",
-    "transliteration": "^2.1.8",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "url-loader": "^1.1.2",
-    "vue-loader": "^15.2.6",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.16.3",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.3.0",
-    "webpack-merge": "^4.1.4",
-    "workbox-webpack-plugin": "^4.3.1"
-  },
-  "lint-staged": {
-    "src/**/*.{js,json,vue}": [
-      "prettier --write",
-      "eslint --fix"
-    ]
-  },
-  "dependencies": {
-    "axios": "^0.19.2",
-    "es6-promise": "^4.2.5",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
-  }
 }
